fixed footer to appear on screen bottom if page content is too short

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,15 @@
 .App {
 	text-align: center;
 
+	main {
+		min-height: 84vh;
+	}
+
+}
+
+/* .App {
+	text-align: center;
+
 	&-logo {
 		height: 40vmin;
 		pointer-events: none;
@@ -34,3 +43,4 @@
 		transform: rotate(360deg);
 	}
 }
+ */
